testing vs 1k bluenile

--- a/diamonds/Diamond-Analysis-3.ipynb
+++ b/diamonds/Diamond-Analysis-3.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -368,6 +368,15 @@
       "       'table', 'hasVisualization', 'visualizationImageUrl', 'v360BaseUrl',\n",
       "       'measurements', 'willArriveForHoliday', 'imageUrl', 'sellingIndex'],\n",
       "      dtype='object')\n",
+      "             carat        price\n",
+      "count  3991.000000  3991.000000\n",
+      "mean      0.971082  3719.090955\n",
+      "std       0.051725   505.863438\n",
+      "min       0.900000  1451.000000\n",
+      "25%       0.900000  3426.500000\n",
+      "50%       1.000000  3815.000000\n",
+      "75%       1.010000  4115.000000\n",
+      "max       1.100000  4404.000000\n",
       "   carat  price clarity color        cut\n",
       "0    0.9   1451     SI2     K       Good\n",
       "1    0.9   1632     SI2     K       Good\n",
@@ -377,22 +386,16 @@
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "count    3991.000000\n",
-       "mean     3719.090955\n",
-       "std       505.863438\n",
-       "min      1451.000000\n",
-       "25%      3426.500000\n",
-       "50%      3815.000000\n",
-       "75%      4115.000000\n",
-       "max      4404.000000\n",
-       "Name: price, dtype: float64"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
     }
    ],
    "source": [
@@ -418,6 +421,7 @@
     "diamonds3a.loc[:,'color'] = diamonds3a.loc[:,'color'].to_frame().applymap(cleanBracketsToS)\n",
     "diamonds3a.loc[:,'cut'] = diamonds3a.loc[:,'cut'].to_frame().applymap(cleanCut)\n",
     "\n",
+    "print(diamonds3a.describe())\n",
     "print(diamonds3a.head())\n",
     "\n"
    ]
@@ -431,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +527,7 @@
        "2984  5577.733410    4113   1.01 -1464.733410  35.612288"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
