--- a/diamonds/Diamond-Analysis-3.ipynb
+++ b/diamonds/Diamond-Analysis-3.ipynb
@@ -348,41 +348,29 @@
    "source": [
     "Hmm is it even worth continuing.. to do multiple linear or tree eval... ?  **probably not**\n",
     "\n",
+    "\n",
+    "## Try BlueNile Data Instead..\n",
+    "\n",
     "I scraped some data from bluenile.com which has a massive dataset -- just requires stealth scraping.  I used some libraries from http://amarder.github.io/post/diamonds/ and made changes to work w/ apparently recent changes to the bluenile site.\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3991, 27)\n",
+      "(11969, 27)\n",
       "Index(['detailsPageUrl', 'carat', 'date', 'dateSet', 'price', 'pricePerCarat',\n",
       "       'skus', 'id', 'shapeCode', 'shapeName', 'clarity', 'color', 'culet',\n",
       "       'cut', 'depth', 'fluorescence', 'lxwRatio', 'polish', 'symmetry',\n",
       "       'table', 'hasVisualization', 'visualizationImageUrl', 'v360BaseUrl',\n",
       "       'measurements', 'willArriveForHoliday', 'imageUrl', 'sellingIndex'],\n",
-      "      dtype='object')\n",
-      "             carat        price\n",
-      "count  3991.000000  3991.000000\n",
-      "mean      0.971082  3719.090955\n",
-      "std       0.051725   505.863438\n",
-      "min       0.900000  1451.000000\n",
-      "25%       0.900000  3426.500000\n",
-      "50%       1.000000  3815.000000\n",
-      "75%       1.010000  4115.000000\n",
-      "max       1.100000  4404.000000\n",
-      "   carat  price clarity color        cut\n",
-      "0    0.9   1451     SI2     K       Good\n",
-      "1    0.9   1632     SI2     K       Good\n",
-      "2    0.9   1720     VS2     K       Good\n",
-      "3    0.9   1923     SI2     K  Very Good\n",
-      "4    0.9   1941     SI1     K       Good\n"
+      "      dtype='object')\n"
      ]
     },
     {
@@ -396,6 +384,27 @@
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  self.obj[item] = s\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              carat         price\n",
+      "count  11969.000000  11969.000000\n",
+      "mean       0.982478   5173.083466\n",
+      "std        0.042880   1341.797777\n",
+      "min        0.900000   1451.000000\n",
+      "25%        1.000000   4115.000000\n",
+      "50%        1.000000   5068.000000\n",
+      "75%        1.010000   6174.000000\n",
+      "max        1.100000   8388.000000\n",
+      "   carat  price clarity color        cut\n",
+      "0    0.9   1451     SI2     K       Good\n",
+      "1    0.9   1632     SI2     K       Good\n",
+      "2    0.9   1720     VS2     K       Good\n",
+      "3    0.9   1923     SI2     K  Very Good\n",
+      "4    0.9   1941     SI1     K       Good\n"
+     ]
     }
    ],
    "source": [
@@ -404,7 +413,7 @@
     "print(diamonds3.columns)\n",
     "\n",
     "# trim down to cols we need\n",
-    "diamonds3a = diamonds3[['carat','price','clarity','color','cut']]\n",
+    "diamonds3a = diamonds3[['carat','price','clarity','color','cut']]   # copy warning\n",
     "\n",
     "# cleanup the cols embedded w/ arrays\n",
     "def cleanBracketsToF(x):\n",
@@ -435,14 +444,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score:  -9.475093420875709\n"
+      "Score:  0.042143188734096726\n"
      ]
     },
     {
@@ -475,59 +484,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1553</th>\n",
-       "      <td>5500.172234</td>\n",
-       "      <td>3655</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>-1845.172234</td>\n",
-       "      <td>50.483508</td>\n",
+       "      <th>7502</th>\n",
+       "      <td>4724.560474</td>\n",
+       "      <td>5603</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>878.439526</td>\n",
+       "      <td>15.678021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3522</th>\n",
-       "      <td>5500.172234</td>\n",
-       "      <td>4281</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>-1219.172234</td>\n",
-       "      <td>28.478679</td>\n",
+       "      <th>638</th>\n",
+       "      <td>4724.560474</td>\n",
+       "      <td>3231</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>-1493.560474</td>\n",
+       "      <td>46.225951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3491</th>\n",
-       "      <td>5500.172234</td>\n",
-       "      <td>4265</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>-1235.172234</td>\n",
-       "      <td>28.960662</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>702</th>\n",
-       "      <td>6120.661642</td>\n",
-       "      <td>3276</td>\n",
-       "      <td>1.08</td>\n",
-       "      <td>-2844.661642</td>\n",
-       "      <td>86.833383</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2984</th>\n",
+       "      <th>9114</th>\n",
        "      <td>5577.733410</td>\n",
-       "      <td>4113</td>\n",
+       "      <td>6240</td>\n",
        "      <td>1.01</td>\n",
-       "      <td>-1464.733410</td>\n",
-       "      <td>35.612288</td>\n",
+       "      <td>662.266590</td>\n",
+       "      <td>10.613247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4754</th>\n",
+       "      <td>5500.172234</td>\n",
+       "      <td>4654</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>-846.172234</td>\n",
+       "      <td>18.181612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11500</th>\n",
+       "      <td>5577.733410</td>\n",
+       "      <td>7734</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>2156.266590</td>\n",
+       "      <td>27.880354</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          predict  actual  carat         diff      diff%\n",
-       "1553  5500.172234    3655   1.00 -1845.172234  50.483508\n",
-       "3522  5500.172234    4281   1.00 -1219.172234  28.478679\n",
-       "3491  5500.172234    4265   1.00 -1235.172234  28.960662\n",
-       "702   6120.661642    3276   1.08 -2844.661642  86.833383\n",
-       "2984  5577.733410    4113   1.01 -1464.733410  35.612288"
+       "           predict  actual  carat         diff      diff%\n",
+       "7502   4724.560474    5603   0.90   878.439526  15.678021\n",
+       "638    4724.560474    3231   0.90 -1493.560474  46.225951\n",
+       "9114   5577.733410    6240   1.01   662.266590  10.613247\n",
+       "4754   5500.172234    4654   1.00  -846.172234  18.181612\n",
+       "11500  5577.733410    7734   1.01  2156.266590  27.880354"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
