pt4 - bluenile from scratch

--- a/diamonds/Diamond-Analysis-3.ipynb
+++ b/diamonds/Diamond-Analysis-3.ipynb
@@ -797,19 +797,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(12631, 27)\n",
-      "Index(['detailsPageUrl', 'carat', 'date', 'dateSet', 'price', 'pricePerCarat',\n",
-      "       'skus', 'id', 'shapeCode', 'shapeName', 'clarity', 'color', 'culet',\n",
-      "       'cut', 'depth', 'fluorescence', 'lxwRatio', 'polish', 'symmetry',\n",
-      "       'table', 'hasVisualization', 'visualizationImageUrl', 'v360BaseUrl',\n",
-      "       'measurements', 'willArriveForHoliday', 'imageUrl', 'sellingIndex'],\n",
+      "(42996, 27)\n",
+      "Index(['carat', 'clarity', 'color', 'culet', 'cut', 'date', 'dateSet', 'depth',\n",
+      "       'detailsPageUrl', 'fluorescence', 'hasVisualization', 'id', 'imageUrl',\n",
+      "       'lxwRatio', 'measurements', 'polish', 'price', 'pricePerCarat',\n",
+      "       'sellingIndex', 'shapeCode', 'shapeName', 'skus', 'symmetry', 'table',\n",
+      "       'v360BaseUrl', 'visualizationImageUrl', 'willArriveForHoliday'],\n",
       "      dtype='object')\n"
      ]
     },
@@ -830,25 +830,25 @@
      "output_type": "stream",
      "text": [
       "              carat         price\n",
-      "count  12631.000000  12631.000000\n",
-      "mean       0.982802   5403.485551\n",
-      "std        0.042518   1653.060573\n",
-      "min        0.900000   1451.000000\n",
-      "25%        1.000000   4165.000000\n",
-      "50%        1.000000   5197.000000\n",
-      "75%        1.010000   6368.500000\n",
-      "max        1.100000  15225.000000\n",
+      "count  42996.000000  4.299600e+04\n",
+      "mean       1.303997  1.303102e+04\n",
+      "std        0.885727  3.357741e+04\n",
+      "min        0.420000  2.200000e+03\n",
+      "25%        0.900000  3.939750e+03\n",
+      "50%        1.010000  6.390000e+03\n",
+      "75%        1.400000  1.092450e+04\n",
+      "max       21.210000  2.055533e+06\n",
       "   carat  price clarity color        cut\n",
-      "0    0.9   1451     SI2     K       Good\n",
-      "1    0.9   1632     SI2     K       Good\n",
-      "2    0.9   1720     VS2     K       Good\n",
-      "3    0.9   1923     SI2     K  Very Good\n",
-      "4    0.9   1941     SI1     K       Good\n"
+      "0   0.70   2200     SI1     F      Ideal\n",
+      "1   0.50   2200    VVS1     D      Ideal\n",
+      "2   0.71   2200     SI1     G      Ideal\n",
+      "3   0.62   2200     VS1     G  Very Good\n",
+      "4   0.70   2201     SI1     G      Ideal\n"
      ]
     }
    ],
    "source": [
-    "diamonds4 = pd.read_csv('./diamonds1carat.csv')\n",
+    "diamonds4 = pd.read_csv('./blue-nile-download-gt2200.csv')\n",
     "print(diamonds4.shape)\n",
     "print(diamonds4.columns)\n",
     "\n",
@@ -879,19 +879,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Eval #4a. Carat linear regression (w/ Blue Nile Data for 1k)\n"
+    "Above we have a good population of carat ranges 0.42 to 21 (???) maybe need to strip out the outliers first..\n",
+    "\n",
+    "#### Eval #4a. Carat linear regression (w/ Blue Nile Data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score:  0.04550470928124739\n"
+      "Score:  0.2534517082983664\n"
      ]
     },
     {
@@ -924,59 +926,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9246</th>\n",
-       "      <td>5500.172234</td>\n",
-       "      <td>6288</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>787.827766</td>\n",
-       "      <td>12.529068</td>\n",
+       "      <th>38392</th>\n",
+       "      <td>14109.462769</td>\n",
+       "      <td>23287</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>9177.537231</td>\n",
+       "      <td>39.410561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3088</th>\n",
-       "      <td>5500.172234</td>\n",
-       "      <td>4146</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>-1354.172234</td>\n",
-       "      <td>32.662138</td>\n",
+       "      <th>36472</th>\n",
+       "      <td>11782.627489</td>\n",
+       "      <td>17190</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>5407.372511</td>\n",
+       "      <td>31.456501</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2306</th>\n",
-       "      <td>4724.560474</td>\n",
-       "      <td>3913</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>-811.560474</td>\n",
-       "      <td>20.740109</td>\n",
+       "      <th>4200</th>\n",
+       "      <td>3561.142834</td>\n",
+       "      <td>2672</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>-889.142834</td>\n",
+       "      <td>33.276304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1763</th>\n",
-       "      <td>5577.733410</td>\n",
-       "      <td>3726</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>-1851.733410</td>\n",
-       "      <td>49.697622</td>\n",
+       "      <th>17778</th>\n",
+       "      <td>4802.121650</td>\n",
+       "      <td>5551</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>748.878350</td>\n",
+       "      <td>13.490873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964</th>\n",
-       "      <td>5577.733410</td>\n",
-       "      <td>7157</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>1579.266590</td>\n",
-       "      <td>22.066041</td>\n",
+       "      <th>42115</th>\n",
+       "      <td>25588.516816</td>\n",
+       "      <td>75528</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>49939.483184</td>\n",
+       "      <td>66.120489</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           predict  actual  carat         diff      diff%\n",
-       "9246   5500.172234    6288   1.00   787.827766  12.529068\n",
-       "3088   5500.172234    4146   1.00 -1354.172234  32.662138\n",
-       "2306   4724.560474    3913   0.90  -811.560474  20.740109\n",
-       "1763   5577.733410    3726   1.01 -1851.733410  49.697622\n",
-       "10964  5577.733410    7157   1.01  1579.266590  22.066041"
+       "            predict  actual  carat          diff      diff%\n",
+       "38392  14109.462769   23287   2.11   9177.537231  39.410561\n",
+       "36472  11782.627489   17190   1.81   5407.372511  31.456501\n",
+       "4200    3561.142834    2672   0.75   -889.142834  33.276304\n",
+       "17778   4802.121650    5551   0.91    748.878350  13.490873\n",
+       "42115  25588.516816   75528   3.59  49939.483184  66.120489"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 260,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4% using carat alone... that isn't so good\n",
+    "## 25% using carat alone... that isn't so good\n",
     "\n",
     "Though if you look at the diff%'s, are they that bad?   Whats the rationale for score -- the prior Test 3 had 62% score but the differential%'s were just a bad in double digit %'s..\n",
     "\n",
@@ -1011,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -1019,35 +1021,35 @@
      "output_type": "stream",
      "text": [
       "   carat  price clarity color        cut\n",
-      "0    0.9   1451     SI2     K       Good\n",
-      "1    0.9   1632     SI2     K       Good\n",
-      "2    0.9   1720     VS2     K       Good\n",
-      "3    0.9   1923     SI2     K  Very Good\n",
-      "4    0.9   1941     SI1     K       Good\n",
+      "0   0.70   2200     SI1     F      Ideal\n",
+      "1   0.50   2200    VVS1     D      Ideal\n",
+      "2   0.71   2200     SI1     G      Ideal\n",
+      "3   0.62   2200     VS1     G  Very Good\n",
+      "4   0.70   2201     SI1     G      Ideal\n",
       "   carat  cut__Fair  cut__Good  cut__Ideal  cut__Premium  cut__Very Good  \\\n",
-      "0    0.9          0          1           0             0               0   \n",
-      "1    0.9          0          1           0             0               0   \n",
-      "2    0.9          0          1           0             0               0   \n",
-      "3    0.9          0          0           0             0               1   \n",
-      "4    0.9          0          1           0             0               0   \n",
+      "0   0.70          0          0           1             0               0   \n",
+      "1   0.50          0          0           1             0               0   \n",
+      "2   0.71          0          0           1             0               0   \n",
+      "3   0.62          0          0           0             0               1   \n",
+      "4   0.70          0          0           1             0               0   \n",
       "\n",
       "   color__D  color__E  color__F  color__G  ...  color__I  color__J  color__K  \\\n",
-      "0         0         0         0         0  ...         0         0         1   \n",
-      "1         0         0         0         0  ...         0         0         1   \n",
-      "2         0         0         0         0  ...         0         0         1   \n",
-      "3         0         0         0         0  ...         0         0         1   \n",
-      "4         0         0         0         0  ...         0         0         1   \n",
+      "0         0         0         1         0  ...         0         0         0   \n",
+      "1         1         0         0         0  ...         0         0         0   \n",
+      "2         0         0         0         1  ...         0         0         0   \n",
+      "3         0         0         0         1  ...         0         0         0   \n",
+      "4         0         0         0         1  ...         0         0         0   \n",
       "\n",
       "   clarity__IF  clarity__SI1  clarity__SI2  clarity__VS1  clarity__VS2  \\\n",
-      "0            0             0             1             0             0   \n",
-      "1            0             0             1             0             0   \n",
-      "2            0             0             0             0             1   \n",
-      "3            0             0             1             0             0   \n",
+      "0            0             1             0             0             0   \n",
+      "1            0             0             0             0             0   \n",
+      "2            0             1             0             0             0   \n",
+      "3            0             0             0             1             0   \n",
       "4            0             1             0             0             0   \n",
       "\n",
       "   clarity__VVS1  clarity__VVS2  \n",
       "0              0              0  \n",
-      "1              0              0  \n",
+      "1              1              0  \n",
       "2              0              0  \n",
       "3              0              0  \n",
       "4              0              0  \n",
@@ -1065,8 +1067,8 @@
       "       'clarity__SI1', 'clarity__SI2', 'clarity__VS1', 'clarity__VS2',\n",
       "       'clarity__VVS1', 'clarity__VVS2'],\n",
       "      dtype='object')\n",
-      "(12631, 1)\n",
-      "Score:  -1.1471513150291267e+23\n"
+      "(42996, 1)\n",
+      "Score:  -1.788544204248242e+20\n"
      ]
     },
     {
@@ -1099,59 +1101,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9246</th>\n",
-       "      <td>6236.0</td>\n",
-       "      <td>6288</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>0.826972</td>\n",
+       "      <th>38392</th>\n",
+       "      <td>15928.0</td>\n",
+       "      <td>23287</td>\n",
+       "      <td>2.11</td>\n",
+       "      <td>7359.0</td>\n",
+       "      <td>31.601323</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3088</th>\n",
-       "      <td>3608.0</td>\n",
-       "      <td>4146</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>538.0</td>\n",
-       "      <td>12.976363</td>\n",
+       "      <th>36472</th>\n",
+       "      <td>13436.0</td>\n",
+       "      <td>17190</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>3754.0</td>\n",
+       "      <td>21.838278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2306</th>\n",
-       "      <td>5468.0</td>\n",
-       "      <td>3913</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>-1555.0</td>\n",
-       "      <td>39.739330</td>\n",
+       "      <th>4200</th>\n",
+       "      <td>2872.0</td>\n",
+       "      <td>2672</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>-200.0</td>\n",
+       "      <td>7.485030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1763</th>\n",
-       "      <td>4396.0</td>\n",
-       "      <td>3726</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>-670.0</td>\n",
-       "      <td>17.981750</td>\n",
+       "      <th>17778</th>\n",
+       "      <td>6144.0</td>\n",
+       "      <td>5551</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>-593.0</td>\n",
+       "      <td>10.682760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10964</th>\n",
-       "      <td>6828.0</td>\n",
-       "      <td>7157</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>329.0</td>\n",
-       "      <td>4.596898</td>\n",
+       "      <th>42115</th>\n",
+       "      <td>30200.0</td>\n",
+       "      <td>75528</td>\n",
+       "      <td>3.59</td>\n",
+       "      <td>45328.0</td>\n",
+       "      <td>60.014829</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       predict  actual  carat    diff      diff%\n",
-       "9246    6236.0    6288   1.00    52.0   0.826972\n",
-       "3088    3608.0    4146   1.00   538.0  12.976363\n",
-       "2306    5468.0    3913   0.90 -1555.0  39.739330\n",
-       "1763    4396.0    3726   1.01  -670.0  17.981750\n",
-       "10964   6828.0    7157   1.01   329.0   4.596898"
+       "       predict  actual  carat     diff      diff%\n",
+       "38392  15928.0   23287   2.11   7359.0  31.601323\n",
+       "36472  13436.0   17190   1.81   3754.0  21.838278\n",
+       "4200    2872.0    2672   0.75   -200.0   7.485030\n",
+       "17778   6144.0    5551   0.91   -593.0  10.682760\n",
+       "42115  30200.0   75528   3.59  45328.0  60.014829"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1197,11 @@
    "metadata": {},
    "source": [
     "## Score is -negative again...  but whats it mean?\n",
-    "The actual predictions aren't bad, the diff%'s are decent.  I probably need to calculate my own MSE or error and score!\n"
+    "The actual predictions aren't bad, the diff%'s are decent.  I probably need to calculate my own MSE or error and score!\n",
+    "\n",
+    "Obviously these datasets are all totally different.  So which do I choose -- originally I was thinking to combine them, but perhaps bluenile is a better baseline.   50k+ samples and street/market values (rather than questionable kaggle/fictious data).\n",
+    "\n",
+    "Notebook 4 will focus on baseline analysis again w/ Bluenile data alone -- [Diamond-Analysis-4](Diamond-Analysis-4.ipynb)"
    ]
   }
  ],
